# jnidemo

./: .gitignore  CMakeLists.txt  README.md  cmake.sh
src/: JNICpp.java  JNIDemo.cpp  JNIDemo.h  JNIDemo.java  MANIFEST.MF  Main.java  User.java  main.cpp  main.h
